Fix spacing and tweak font sizes on xs screens

--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -122,12 +122,14 @@ a {
   margin-top: @itemSpacing;
   img {
     @media screen and (min-width: 480px) {
-    margin: 0 9px;
+      margin: 0 9px;
     }
     @media screen and (max-width: 480px) {
       margin: 0 2px;
+      height: 48px;
+      width: 48px;
     }
-    opacity: 0.8;
+    opacity: 0.6;
     width: 64px;
     height: 64px;
   }
@@ -159,17 +161,26 @@ address {
   color: #000;
   font-family   : @displayFont;
   font-size     : 50px;
+  @media screen and (max-width: 480px) {
+    font-size: 40px;
+  }
   letter-spacing: @nameKerning;
   padding       : 10px 0px;
   margin-right  : -@nameKerning;
-  margin-bottom : 60px;
-  margin-top    : 60px;
+  margin-bottom : 15px;
+  margin-top    : 30px;
   line-height   : 1.2em;
 }
 .page-header {
   margin-bottom: 30px;
   margin-top   : 20px;
   padding-bottom: 5px;
+  @media screen and (max-width: 480px) {
+    h2 {
+      font-size: 190%;
+      line-height: 110%;
+    }
+  }
 }
 .resume-item {
   margin-bottom: @itemSpacing;
